packages/rust-transformer/cargo-errors.txt
    Checking rust-transformer v0.0.0 (C:\Users\Gabriel\Code\csslit\packages\rust-transformer)
warning: unused import: `walk`
 --> packages\rust-transformer\src\lib.rs:5:21
  |
5 | use oxc_ast_visit::{walk, Visit};
  |                     ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0425]: cannot find function `traverse` in this scope
   --> packages\rust-transformer\src\lib.rs:147:5
    |
147 |     traverse(&mut visitor, &allocator, &mut ret.program, state);
    |     ^^^^^^^^ not found in this scope

warning: unused import: `Visit`
 --> packages\rust-transformer\src\lib.rs:5:27
  |
5 | use oxc_ast_visit::{walk, Visit};
  |                           ^^^^^

For more information about this error, try `rustc --explain E0425`.
warning: `rust-transformer` (lib) generated 2 warnings
error: could not compile `rust-transformer` (lib) due to 1 previous error; 2 warnings emitted
